# sessync

./: .gitignore  Cargo.toml  README.md  USAGE.md  deny.toml  lefthook.yml
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/commands/: save-session.md
.claude/hooks/: save-session-wrapper.sh  session-end.sh
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
docs/: README.md
docs/architecture/: authentication.md  bigquery-schema.md  component-design.md  data-flow.md  deduplication-mechanism.md  system-overview.md
docs/project/: future-roadmap.md  gcp-setup-guide.md  implementation-checklist.md
examples/: README.md  claude-settings.json.example  config.json.example
examples/claude-commands/: save-session.md
queries/: README.md  daily_activity.sql  developer_stats.sql  error_patterns.sql  message_analysis.sql  session_summary.sql  tool_usage.sql
scripts/: setup.ps1  setup.sh
src/: ARCHITECTURE.md  CLEAN_ARCHITECTURE.md  CODING_RULES.md  MIGRATION_GUIDE.md  auth.rs  config.rs  dedup.rs  lib.rs  main.rs  models.rs  parser.rs  uploader.rs
src/adapter/: mod.rs
src/adapter/auth/: gcp_auth.rs  mod.rs
src/adapter/bigquery/: batch_uploader.rs  client.rs  mod.rs  models.rs  retry.rs
src/adapter/config/: json_config.rs  mod.rs
src/application/: mod.rs
src/domain/: mod.rs
src/driver/: cli.rs  mod.rs  workflow.rs
tests/: README.md  integration_test.rs  workflow_test.rs
tests/fixtures/: sample.jsonl  test-config.json  test-session.jsonl
(+19 files in other folders)
