[package]
name = "upload-to-bigquery"
version = "0.1.0"
edition = "2021"

[dependencies]
# JSON処理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# BigQuery SDK
google-cloud-bigquery = "0.7"
google-cloud-gax = "0.17"
google-cloud-auth = "0.16"

# 非同期ランタイム
tokio = { version = "1.35", features = ["full"] }

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# ファイルシステム操作
walkdir = "2.4"

# CLI引数パース
clap = { version = "4.5", features = ["derive"] }

# ログ出力
env_logger = "0.11"
log = "0.4"

# 時刻処理
chrono = "0.4"

# パス展開
shellexpand = "3.1"

# ホスト名取得
hostname = "0.3"

# UUID生成
uuid = { version = "1.6", features = ["v4"] }
