[package]
name = "sessync"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
# JSON処理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# BigQuery SDK
google-cloud-bigquery = "0.15"
google-cloud-gax = "1.4"
google-cloud-auth = "1.3"

# 非同期ランタイム
tokio = { version = "1.35", features = ["full"] }

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# ファイルシステム操作
walkdir = "2.4"

# CLI引数パース
clap = { version = "4.5", features = ["derive"] }

# ログ出力
env_logger = "0.11"
log = "0.4"

# 時刻処理
chrono = { version = "0.4", features = ["serde"] }

# パス展開
shellexpand = "3.1"

# ホスト名取得
hostname = "0.3"

# UUID生成
uuid = { version = "1.6", features = ["v4"] }

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.24.0"
mockall = "0.13"
async-trait = "0.1"
